--- a/pom.xml
+++ b/pom.xml
@@ -99,7 +99,7 @@
 	    <repository>
 	      <id>nexus</id>
 	      <name>Mithun Technologies Releases Nexus Repository</name>
-	      <url>http://3.111.39.233:9980/mithuntechnologies/repository/facebook-release/</url>
+	      <url>http:http://3.111.39.233:9980/mithuntechnologies/repository/facebook-release/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
